# 4DPocket

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  alembic.ini  app.sh  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  hatch_build.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.omc/: prd-audit-fixes.json
.omc/sessions/: 3a679718-a821-4f8b-9a5e-876177983249.json  aa805003-0ede-4e2c-98ed-6a8f29867961.json
docs/: API.md  MCP.md  SELF_HOSTING.md
docs/plans/: pat-mcp-synthesis.md  search-architecture-enhancements.md
extension/: PRIVACY.md  STORE_CHECKLIST.md  STORE_LISTING.md  package.json  pnpm-lock.yaml  wxt.config.ts
frontend/: .size-limit.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx
landing/: index.html  privacy.html  robots.txt  script.js  sitemap.xml  styles.css
mcp-npm/: README.md  bin.mjs  package.json
src/fourdpocket/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  main.py
tests/: conftest.py  factories.py  seed_urls.py  test_cli.py  test_config.py  test_domain_tagger.py  test_enrichment_summary.py  test_main.py  test_phase3_processors.py  test_phase4_mastodon.py  test_pipeline_integration.py  test_processors_sections.py  test_sections.py  test_url_matching.py
tests/test_ai/: test_base.py  test_canonicalizer.py  test_canonicalizer_scale.py  test_connector.py  test_extractor.py  test_factory.py  test_hierarchy.py  test_llm_cache.py  test_local_embeddings.py  test_nvidia_embeddings.py  test_openai_compatible.py  test_sanitizer.py  test_summarizer.py  test_synthesizer.py  test_tagger.py  test_title_generator.py
tests/test_api/: test_admin.py  test_admin_ai.py  test_admin_search.py  test_ai_routes.py  test_api_tokens.py  test_auth.py  test_auth_admin_bootstrap_race.py  test_auth_rate_limit.py  test_auth_utils.py  test_collections.py  test_comments.py  test_cors.py  test_deps.py  test_email_verification.py  test_entities.py  test_feeds.py  test_health.py  test_highlights.py  test_import_export.py  test_item_links.py  test_items.py  test_middleware.py  test_notes.py  test_password_reset.py  test_pat_auth.py  test_pat_enforcement.py  test_pat_events.py  test_public_share_schema.py  test_quota.py  test_rate_limit.py  test_rss_routes.py  test_rules.py  test_saved_filters.py  test_search_filter_only.py  test_search_routes.py  test_settings.py  test_sharing_routes.py  test_stats.py  test_tags.py
tests/test_cli_ops/: test_backup_restore.py  test_rotate_key.py
tests/test_db/: test_session.py
tests/test_integration/: test_cross_user_isolation.py  test_item_lifecycle.py  test_search_roundtrip.py
tests/test_mcp/: test_mcp_auth.py  test_mcp_tools.py  test_serializers.py  test_server.py
tests/test_middleware/: test_json_logging.py  test_request_id.py  test_security_headers.py
tests/test_models/: test_entity_relation_cascade.py  test_model_validation.py  test_pat_event.py  test_quota.py
tests/test_ops/: test_reembed.py
tests/test_processors/: test_base.py  test_generic_url.py  test_github.py  test_hackernews.py  test_image.py  test_instagram.py  test_linkedin.py  test_mastodon.py  test_medium.py  test_pdf_processor.py  test_pipeline.py  test_reddit.py  test_spotify.py  test_stackoverflow.py  test_substack.py  test_threads.py  test_tiktok.py  test_twitter.py  test_youtube.py
tests/test_search/: test_admin_config_resolver.py  test_chroma_backend.py  test_chunk_indexing.py  test_chunking.py  test_collection_filter.py  test_filters.py  test_graph_ranker.py  test_indexer.py  test_meilisearch_backend.py  test_pgvector_backend.py  test_reranker_local.py  test_rrf_n_ranker.py  test_search_service.py  test_semantic.py  test_sqlite_fts_backend.py
tests/test_sharing/: __init__.py  test_feed_manager.py  test_permissions.py  test_share_manager.py
tests/test_storage/: test_local.py
tests/test_utils/: __init__.py  test_ssrf.py
tests/test_workers/: test_ai_enrichment.py  test_archiver.py  (+11 more)
(+277 files in other folders)
